--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,13 +26,15 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:5000",
   "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node server.js",
+    "build": "echo \"No build required for backend\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
